# racketfit

./: .gitignore  .vercelignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  vercel.json
.github/workflows/: ci.yml
public/: app.js  ball.js  engine.js  i18n.js  index.html  styles.css
public/data/: rackets.json  strings.json
racketfit/: __init__.py  __main__.py  cli.py  database.py  engine.py  grip.py  models.py  profile.py  report.py  strings.py  survey.py  web.py
racketfit/data/: rackets.json  strings.json
racketfit/web_static/: app.js  index.html  styles.css
scripts/: build_dataset.py  racket_images.json  string_images.json
tests/: test_engine.py  test_gear.py
