[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "racketfit"
version = "1.0.0"
description = "Find tennis racket specs that fit your game: take a short survey, get a target spec profile and ranked racket matches."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "tylrcc" }]
keywords = ["tennis", "racket", "racquet", "specs", "recommendation", "survey"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Games/Entertainment",
  "Intended Audience :: End Users/Desktop",
]
dependencies = []  # zero runtime dependencies, standard library only

[project.urls]
Homepage = "https://github.com/tylrcc/racketfit"
Issues = "https://github.com/tylrcc/racketfit/issues"

[project.scripts]
racketfit = "racketfit.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools]
packages = ["racketfit"]

[tool.setuptools.package-data]
racketfit = ["data/*.json", "web_static/*"]
